test/corpus/test.txt
====================
Genus
====================

Bubo

----

(list (sci_name (genus)))

====================
Subgenus
====================

Bubo (Bubo)

----

(list (sci_name (genus (subgenus))))

====================
Species
====================

Bubo bubo

----

(list (sci_name
  (genus)
  (species)
))

====================
Species Author
====================

Bubo bubo Linnaeus

----

(list (sci_name
  (genus)
  (species (authorship (author)))
))


====================
Species Authors 1
====================

Bubo bubo Linnaeus, Burg

----

(list (sci_name
  (genus)
  (species (authorship (author) (author)))
))

====================
Species Authors 2
====================

Bubo bubo Linnaeus & Burg

----

(list (sci_name
  (genus)
  (species (authorship (author) (author)))
))

=====================
Species Authors Year
=====================

Bubo bubo Linnaeus & Burg 1888

----

(list (sci_name
  (genus)
  (species (authorship (author) (author) (year)))
))

=========================
Species Orig Authors Year
=========================

Bubo bubo (Linnaeus & Burg 1888)

----

(list (sci_name (genus) (species (authorship_orig (authorship (author) (author) (year))))))

=========================
Species Combo Authors Year
=========================

Bubo bubo (Linnaeus & Burg) Kenn 1888

----

(list (sci_name (genus) (species (authorship_orig (authorship (author) (author))) (authorship (author) (year)))))

=====================
Several Names
=====================

Bubo bubo Linnaeus & Burg 1888
Pomatomus saltator

----

(list 
 (sci_name
  (genus)
  (species (authorship (author) (author) (year)))
 )
 (sci_name
  (genus)
  (species)
 )
 )

